FIX: z-index for button more-functions

--- a/src/styles/components/_dropdown.scss
+++ b/src/styles/components/_dropdown.scss
@@ -1,6 +1,7 @@
 
 .more-functions {
   position: relative;
+  z-index: 0;
 
   &__overlay {
     content: "";
